Add basic architecture